tests/ui/missing-send-attr-in-impl.stderr
error[E0053]: method `method` has an incompatible type for trait
  --> tests/ui/missing-send-attr-in-impl.rs:13:5
   |
13 |     async fn method() {}
   |     ^^^^^^^^^^^^^^^^^ expected trait `Future<Output = ()>`, found trait `Future<Output = ()> + Send`
   |
note: type in trait
  --> tests/ui/missing-send-attr-in-impl.rs:6:5
   |
6  |     async fn method();
   |     ^^^^^^^^^^^^^^^^^^
   = note: expected fn pointer `fn() -> Pin<Box<(dyn Future<Output = ()> + 'async_trait)>>`
              found fn pointer `fn() -> Pin<Box<(dyn Future<Output = ()> + Send + 'async_trait)>>`
